--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             cursor: pointer;
             border: none;
             border-radius: 4px;
+            display: block;
+            width: 200px; /* Tamaño uniforme de largo */
         }
         .back-button {
             background-color: #7f8c8d;
@@ -121,10 +123,10 @@
             const main = document.getElementById('main');
             main.innerHTML = `
                 <h2>Rutinas</h2>
-                <button onclick="registerRoutines()">Registrar Rutinas</button><br
+                <button onclick="registerRoutines()">Registrar Rutinas</button><br>
                 <button onclick="viewRoutines()">Ver Rutinas</button><br>
                 <button onclick="deleteRoutines()">Eliminar Rutinas</button><br>
-                <button class="start-button" onclick="showMainScreen()">Inicio</button>
+                <button class="back-button" onclick="showMainScreen()">Atrás</button>
             `;
         }
 
@@ -141,144 +143,139 @@
                 <label>Descripción:</label>
                 <input type="text" id="description"><br><br>
                 <button class="save-button" onclick="saveRoutine()">Guardar Rutina</button><br>
-                <button class="start-button" onclick="manageRoutines()">Inicio</button>
+                <button class="back-button" onclick="manageRoutines()">Atrás</button>
             `;
         }
 
         function saveRoutine() {
-            alert('Rutina guardada con éxito!');
-            manageRoutines();
-        }
+            alert('Rutina guard
+    function viewRoutines() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Ver Rutinas</h2>
+            <ul>
+                <li>Rutina 1: Ejercicio A, 10 repeticiones, 3 series</li>
+                <li>Rutina 2: Ejercicio B, 15 repeticiones, 4 series</li>
+            </ul>
+            <button class="back-button" onclick="manageRoutines()">Atrás</button>
+        `;
+    }
 
-        function viewRoutines() {
-            const main = document.getElementById('main');
-            main.innerHTML = `
-                <h2>Ver Rutinas</h2>
-                <ul>
-                    <li>Rutina 1: Ejercicio A, 10 repeticiones, 3 series</li>
-                    <li>Rutina 2: Ejercicio B, 15 repeticiones, 4 series</li>
-                </ul>
-                <button class="start-button" onclick="manageRoutines()">Inicio</button>
-            `;
-        }
+    function deleteRoutines() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Eliminar Rutinas</h2>
+            <ul>
+                <li>Rutina 1 <button onclick="deleteRoutine('Rutina 1')">Eliminar</button></li>
+                <li>Rutina 2 <button onclick="deleteRoutine('Rutina 2')">Eliminar</button></li>
+            </ul>
+            <button class="back-button" onclick="manageRoutines()">Atrás</button>
+        `;
+    }
 
-        function deleteRoutines() {
-            const main = document.getElementById('main');
-            main.innerHTML = `
-                <h2>Eliminar Rutinas</h2>
-                <ul>
-                    <li>Rutina 1 <button onclick="deleteRoutine('Rutina 1')">Eliminar</button></li>
-                    <li>Rutina 2 <button onclick="deleteRoutine('Rutina 2')">Eliminar</button></li>
-                </ul>
-                <button class="start-button" onclick="manageRoutines()">Inicio</button>
-            `;
-        }
+    function deleteRoutine(routine) {
+        alert(`Rutina ${routine} eliminada.`);
+        deleteRoutines(); // Actualizar la vista de eliminación de rutinas
+    }
 
-        function deleteRoutine(routine) {
-            alert(`Rutina ${routine} eliminada.`);
-            deleteRoutines(); // Actualizar la vista de eliminación de rutinas
-        }
+    function editUserInfo() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Editar Información del Usuario</h2>
+            <label>Nombre de Usuario:</label>
+            <input type="text" id="username" value="${userInfo.nombre}"><br><br>
+            <label>Peso (en kg):</label>
+            <input type="text" id="weight" value="${userInfo.peso}" placeholder="Peso en kg"><br><br>
+            <label>Altura (en cm):</label>
+            <input type="text" id="height" value="${userInfo.altura}" placeholder="Altura en cm"><br><br>
+            <button class="save-button" onclick="saveUserInfo()">Guardar Cambios</button><br>
+            <button class="back-button" onclick="showMainScreen()">Atrás</button>
+        `;
+    }
 
-        function editUserInfo() {
-            const main = document.getElementById('main');
-            main.innerHTML = `
-                <h2>Editar Información del Usuario</h2>
-                <label>Nombre de Usuario:</label>
-                <input type="text" id="username" value="${userInfo.nombre}"><br><br>
-                <label>Peso (en kg):</label>
-                <input type="text" id="weight" value="${userInfo.peso}" placeholder="Peso en kg"><br><br>
-                <label>Altura (en cm):</label>
-                <input type="text" id="height" value="${userInfo.altura}" placeholder="Altura en cm"><br><br>
-                <button class="save-button" onclick="saveUserInfo()">Guardar Cambios</button><br>
-                <button class="start-button" onclick="showMainScreen()">Inicio</button>
-            `;
-        }
+    function saveUserInfo() {
+        userInfo.nombre = document.getElementById('username').value;
+        userInfo.peso = document.getElementById('weight').value;
+        userInfo.altura = document.getElementById('height').value;
+        alert('Información actualizada con éxito!');
+        showMainScreen();
+    }
 
-        function saveUserInfo() {
-            userInfo.nombre = document.getElementById('username').value;
-            userInfo.peso = document.getElementById('weight').value;
-            userInfo.altura = document.getElementById('height').value;
-            alert('Información actualizada con éxito!');
-            showMainScreen();
-        }
+    function registerExercise() {
+        alert('Funcionalidad no implementada en la versión web.');
+        showMainScreen();
+    }
 
-        function registerExercise() {
-            alert('Funcionalidad no implementada en la versión web.');
-            showMainScreen();
-        }
+    function viewProgress() {
+        const main = document.getElementById('main');
+        main.innerHTML = `
+            <h2>Ver Progreso</h2>
+            <button class="back-button" onclick="showMainScreen()">Atrás</button><br>
+            <canvas id="weightChart"></canvas><br>
+            <canvas id="heightChart"></canvas><br>
+        `;
 
-        function viewProgress() {
-            const main = document.getElementById('main');
-            main.innerHTML = `
-                <h2>Ver Progreso</h2>
-                <button class="start-button" onclick="showMainScreen()">Inicio</button><br>
-                <canvas id="weightChart"></canvas><br>
-                <canvas id="heightChart"></canvas><br>
-            `;
-
-            const weightCtx = document.getElementById('weightChart').getContext('2d');
-            new Chart(weightCtx, {
-                type: 'line',
-                data: {
-                    labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
-                    datasets: [{
-                        label: 'Peso (kg)',
-                        data: [70, 71, 70.5, 72, 71],
-                        borderColor: 'rgba(255, 99, 132, 1)', /* Color llamativo */
-                        backgroundColor: 'rgba(255, 99, 132, 0.2)', /* Color llamativo */
-                        fill: true
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            display: true
-                        },
-                        tooltip: {
-                            callbacks: {
-                                label: function(tooltipItem) {
-                                    return `Peso: ${tooltipItem.raw} kg`;
-                                }
+        const weightCtx = document.getElementById('weightChart').getContext('2d');
+        new Chart(weightCtx, {
+            type: 'line',
+            data: {
+                labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
+                datasets: [{
+                    label: 'Peso (kg)',
+                    data: [70, 71, 70.5, 72, 71],
+                    borderColor: 'rgba(255, 99, 132, 1)', /* Color llamativo */
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)', /* Color llamativo */
+                    fill: true
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    legend: {
+                        display: true
+                    },
+                    tooltip: {
+                        callbacks: {
+                            label: function(tooltipItem) {
+                                return `Peso: ${tooltipItem.raw} kg`;
                             }
                         }
                     }
                 }
-            });
+            }
+        });
 
-            const heightCtx = document.getElementById('heightChart').getContext('2d');
-            new Chart(heightCtx, {
-                type: 'line',
-                data: {
-                    labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
-                    datasets: [{
-                        label: 'Altura (cm)',
-                        data: [170, 171, 170.5, 172, 171],
-                        borderColor: 'rgba(54, 162, 235, 1)', /* Color llamativo */
-                        backgroundColor: 'rgba(54, 162, 235, 0.2)', /* Color llamativo */
-                        fill: true
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            display: true
-                        },
-                        tooltip: {
-                            callbacks: {
-                                label: function(tooltipItem) {
-                                    return `Altura: ${tooltipItem.raw} cm`;
-                                }
+        const heightCtx = document.getElementById('heightChart').getContext('2d');
+        new Chart(heightCtx, {
+            type: 'line',
+            data: {
+                labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
+                datasets: [{
+                    label: 'Altura (cm)',
+                    data: [170, 171, 170.5, 172, 171],
+                    borderColor: 'rgba(54, 162, 235, 1)', /* Color llamativo */
+                    backgroundColor: 'rgba(54, 162, 235, 0.2)', /* Color llamativo */
+                    fill: true
+                }]
+            },
+            options: {
+                responsive: true,
+                plugins: {
+                    legend: {
+                        display: true
+                    },
+                    tooltip: {
+                        callbacks: {
+                            label: function(tooltipItem) {
+                                return `Altura: ${tooltipItem.raw} cm`;
                             }
                         }
                     }
                 }
-            });
-        }
+            }
+        });
+    }
 
-        // Inicializa la pantalla de inicio de sesión
-        showLoginScreen();
-    </script>
-</body>
-</html>
+    // Inicializa la pantalla de inicio de sesión
+    showLoginScreen();
+</script>
