--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #ffffff; /* Fondo blanco */
+            background-color: #ffffff;
             margin: 0;
             padding: 0;
             overflow: hidden;
@@ -16,33 +16,38 @@
             display: flex;
             justify-content: space-between;
             padding: 20px;
-            background: linear-gradient(135deg, #333333, #555555); /* Gradiente de gris oscuro a gris medio */
+            background: linear-gradient(135deg, #333333, #555555);
             color: white;
+        }
+        #header button {
+            width: 120px; /* Ancho fijo para todos los botones */
         }
         #main {
             display: flex;
             flex-direction: column;
             align-items: center;
             padding: 50px;
-            overflow-y: auto; /* Permite el desplazamiento vertical si es necesario */
-            max-height: 90vh; /* Asegura que la altura máxima del contenedor no exceda el 90% de la altura de la ventana */
+            overflow-y: auto;
+            max-height: 90vh;
         }
         button {
-            padding: 10px 20px;
+            width: 150px; /* Ancho fijo para todos los botones en el cuerpo principal */
+            padding: 10px;
             margin: 10px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #e0e0e0; /* Gris claro para los botones */
-            color: #333333; /* Color de texto oscuro para contraste */
+            background-color: #e0e0e0;
+            color: #333333;
             border: none;
             border-radius: 5px;
+            text-align: center;
         }
         .back-button {
-            background-color: #b0b0b0; /* Gris más oscuro para el botón Atrás */
+            background-color: #b0b0b0;
             color: #333333;
         }
         .save-button {
-            background-color: #e0e0e0; /* Gris claro para el botón Guardar */
+            background-color: #e0e0e0;
             color: #333333;
         }
         canvas {
@@ -53,7 +58,7 @@
             width: 200px;
             padding: 8px;
             margin: 5px 0;
-            border: 1px solid #cccccc; /* Borde gris claro para los campos de texto */
+            border: 1px solid #cccccc;
             border-radius: 5px;
         }
     </style>
@@ -61,7 +66,10 @@
 <body>
     <div id="header">
         <button onclick="goToStartScreen()">Inicio</button>
-        <button onclick="showUserInfo()">Ver Info</button>
+        <div>
+            <button onclick="editUserInfo()">Editar Info</button>
+            <button onclick="showUserInfo()">Ver Info</button>
+        </div>
     </div>
 
     <div id="main">
@@ -77,28 +85,28 @@
         };
 
         function goToStartScreen() {
-            showLoginScreen();
+            showRegisterScreen();
         }
 
         function showUserInfo() {
             alert(`Nombre: ${userInfo.nombre}\nPeso: ${userInfo.peso}\nAltura: ${userInfo.altura}`);
         }
 
-        function showLoginScreen() {
+        function showRegisterScreen() {
             const main = document.getElementById('main');
             main.innerHTML = `
-                <h2>Inicio de Sesión</h2>
+                <h2>Registro de Usuario</h2>
                 <label>Nombre de Usuario:</label>
                 <input type="text" id="username"><br><br>
                 <label>Peso (en kg):</label>
                 <input type="text" id="weight" placeholder="Peso en kg"><br><br>
                 <label>Altura (en cm):</label>
                 <input type="text" id="height" placeholder="Altura en cm"><br><br>
-                <button class="save-button" onclick="login()">Iniciar Sesión</button>
+                <button class="save-button" onclick="register()">Registrar</button>
             `;
         }
 
-        function login() {
+        function register() {
             userInfo.nombre = document.getElementById('username').value;
             userInfo.peso = document.getElementById('weight').value;
             userInfo.altura = document.getElementById('height').value;
@@ -176,7 +184,7 @@
 
         function deleteRoutine(routine) {
             alert(`Rutina ${routine} eliminada.`);
-            deleteRoutines(); // Actualizar la vista de eliminación de rutinas
+            deleteRoutines();
         }
 
         function editUserInfo() {
@@ -222,25 +230,17 @@
                 data: {
                     labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
                     datasets: [{
-                        label: 'Peso (kg)',
-                        data: [70, 71, 70.5, 72, 71],
+                        label: 'Peso',
+                        data: [70, 69.5, 69, 68.5, 68],
                         borderColor: 'rgba(75, 192, 192, 1)',
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        fill: true
+                        borderWidth: 2,
+                        fill: false
                     }]
                 },
                 options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            display: true
-                        },
-                        tooltip: {
-                            callbacks: {
-                                label: function(tooltipItem) {
-                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' kg';
-                                }
-                            }
+                    scales: {
+                        y: {
+                            beginAtZero: false
                         }
                     }
                 }
@@ -252,33 +252,22 @@
                 data: {
                     labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
                     datasets: [{
-                        label: 'Altura (cm)',
-                        data: [175, 175.2, 175.1, 175.3, 175.2],
+                        label: 'Altura',
+                        data: [170, 170, 170, 170, 170],
                         borderColor: 'rgba(153, 102, 255, 1)',
-                        backgroundColor: 'rgba(153, 102, 255, 0.2)',
-                        fill: true
+                        borderWidth: 2,
+                        fill: false
                     }]
                 },
                 options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            display: true
-                        },
-                        tooltip: {
-                            callbacks: {
-                                label: function(tooltipItem) {
-                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' cm';
-                                }
-                            }
+                    scales: {
+                        y: {
+                            beginAtZero: false
                         }
                     }
                 }
             });
         }
-
-        // Mostrar la pantalla de inicio de sesión al cargar la página
-        showLoginScreen();
     </script>
 </body>
 </html>
